🎯 Implement Complete Quiz Functionality with Multiple Choice Questions
✨ Features Added:
- Multiple choice quiz system with A, B, C, D options
- Dynamic question loading from database
- Progress tracking with visual progress bar
- Comprehensive results with detailed feedback
- Score-based course completion (60% minimum)
- Question-by-question navigation
- Retake functionality for failed attempts

🔧 Technical Implementation:
- Backend API endpoints for quiz questions and submissions
- Frontend JavaScript quiz logic with state management
- Professional CSS styling for quiz interface
- Database integration with quiz_questions table
- Enhanced lesson navigation system
- API service layer for quiz operations

📊 Enhanced Course Content:
- Professional quiz questions for all 5 courses
- Detailed explanations for each answer
- Course completion tracking
- User progress management

🎨 UI/UX Improvements:
- Responsive quiz modal design
- Visual feedback and animations
- Progress indicators and navigation
- Professional styling with gradients
- Mobile-friendly interface

All existing functionality preserved while adding comprehensive quiz system.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EasyLearn - Mini E-Learning Platform</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="api-service.js"></script>
+    <script src="api-service.js?v=2"></script>
 </head>
 <body>
     <header>
@@ -166,6 +166,7 @@
                 </div>
                 <div class="lesson-actions">
                     <button class="btn btn-success" onclick="markLessonComplete()">Mark Complete</button>
+                    <button class="btn btn-warning quiz-button" onclick="goToQuiz()" style="display: none;">🎯 Take Quiz</button>
                     <button class="btn btn-secondary" onclick="closeModal('lesson-modal')">Back to Course</button>
                 </div>
             </div>
@@ -261,6 +262,6 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="script.js?v=2"></script>
 </body>
 </html>
